@@ -42,11 +42,14 @@ import com.facebook.buck.apple.toolchain.impl.AppleDeveloperDirectoryProviderFac
 import com.facebook.buck.apple.toolchain.impl.AppleSdkLocationFactory;
 import com.facebook.buck.apple.toolchain.impl.AppleToolchainProviderFactory;
 import com.facebook.buck.core.cell.Cell;
+import com.facebook.buck.core.cell.Cells;
 import com.facebook.buck.core.cell.TestCellBuilder;
 import com.facebook.buck.core.config.BuckConfig;
 import com.facebook.buck.core.config.FakeBuckConfig;
 import com.facebook.buck.core.exceptions.DependencyStack;
 import com.facebook.buck.core.exceptions.HumanReadableException;
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.core.graph.transformation.executor.DepsAwareExecutor;
 import com.facebook.buck.core.graph.transformation.executor.impl.DefaultDepsAwareExecutor;
 import com.facebook.buck.core.graph.transformation.model.ComputeResult;
@@ -84,7 +87,6 @@ import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
 import com.facebook.buck.json.JsonObjectHashing;
 import com.facebook.buck.jvm.core.JavaLibrary;
-import com.facebook.buck.manifestservice.ManifestService;
 import com.facebook.buck.parser.config.ParserConfig;
 import com.facebook.buck.parser.config.ParserConfig.ApplyDefaultFlavorsMode;
 import com.facebook.buck.parser.events.ParseBuckFileEvent;
@@ -99,14 +101,12 @@ import com.facebook.buck.rules.coercer.TypeCoercerFactory;
 import com.facebook.buck.rules.keys.config.TestRuleKeyConfigurationFactory;
 import com.facebook.buck.shell.GenruleDescriptionArg;
 import com.facebook.buck.testutil.CloseableResource;
-import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.facebook.buck.testutil.TestConsole;
 import com.facebook.buck.testutil.integration.TestDataHelper;
 import com.facebook.buck.util.CreateSymlinksForTests;
 import com.facebook.buck.util.DefaultProcessExecutor;
 import com.facebook.buck.util.ProcessExecutor;
-import com.facebook.buck.util.ThrowingCloseableMemoizedSupplier;
 import com.facebook.buck.util.config.ConfigBuilder;
 import com.facebook.buck.util.environment.EnvVariablesProvider;
 import com.facebook.buck.util.environment.Platform;
@@ -176,7 +176,7 @@ public class ParserWithConfigurableAttributesTest {
   private Parser parser;
   private TypeCoercerFactory typeCoercerFactory;
   private ProjectFilesystem filesystem;
-  private Path cellRoot;
+  private AbsPath cellRoot;
   private BuckEventBus eventBus;
   private Cell cell;
   private KnownRuleTypesProvider knownRuleTypesProvider;
@@ -184,11 +184,6 @@ public class ParserWithConfigurableAttributesTest {
   private ListeningExecutorService executorService;
   private ExecutableFinder executableFinder;
   private ParsingContext parsingContext;
-
-  private static ThrowingCloseableMemoizedSupplier<ManifestService, IOException>
-      getManifestSupplier() {
-    return ThrowingCloseableMemoizedSupplier.of(() -> null, ManifestService::close);
-  }
 
   @Parameterized.Parameters(name = "project.parsing_threads={0}, project.parallel_parsing={1}")
   public static Collection<Object[]> generateData() {
@@ -221,20 +216,17 @@ public class ParserWithConfigurableAttributesTest {
     try (PerBuildState state =
         new PerBuildStateFactory(
                 typeCoercerFactory,
-                new DefaultConstructorArgMarshaller(typeCoercerFactory),
+                new DefaultConstructorArgMarshaller(),
                 knownRuleTypesProvider,
                 new ParserPythonInterpreterProvider(cell.getBuckConfig(), executableFinder),
                 WatchmanFactory.NULL_WATCHMAN,
                 eventBus,
-                getManifestSupplier(),
-                new FakeFileHashCache(
-                    ImmutableMap.of(buildFile, HashCode.fromBytes(new byte[] {1}))),
                 new ParsingUnconfiguredBuildTargetViewFactory(),
                 UnconfiguredTargetConfiguration.INSTANCE)
             .create(
                 ParsingContext.builder(cell, executor).setProfilingEnabled(enableProfiling).build(),
                 parser.getPermState())) {
-      AbstractParser.getTargetNodeRawAttributes(state, cell, buildFile).getTargets();
+      AbstractParser.getTargetNodeRawAttributes(state, cell, AbsPath.of(buildFile)).getTargets();
     }
   }
 
@@ -345,7 +337,8 @@ public class ParserWithConfigurableAttributesTest {
             toolchainProviderBuilder.withToolchain(
                 AppleCxxPlatformsProvider.DEFAULT_NAME, provider));
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
     PluginManager pluginManager = BuckPluginManagerFactory.createPluginManager();
     knownRuleTypesProvider = TestKnownRuleTypesProvider.create(pluginManager);
 
@@ -435,13 +428,13 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage("When parsing ////cake:walk");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         "genrule(name = 'cake', out = 'file.txt', cmd = '$(exe ////cake:walk) > $OUT')"
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -450,14 +443,14 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expectMessage("Buck wasn't able to parse");
     thrown.expectMessage(Paths.get("foo/BUCK").toString());
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         "genrule(name = 'cake', out = 'foo.txt', cmd = '$(exe //foo:bar) > $OUT')".getBytes(UTF_8));
 
     buckFile = cellRoot.resolve("foo/BUCK");
-    Files.createDirectories(buckFile.getParent());
-    Files.write(buckFile, "I do not parse as python".getBytes(UTF_8));
+    Files.createDirectories(buckFile.getParent().getPath());
+    Files.write(buckFile.getPath(), "I do not parse as python".getBytes(UTF_8));
 
     parser.buildTargetGraph(
         parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:cake")));
@@ -469,14 +462,14 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(BuildFileParseException.class);
     thrown.expectMessage("Duplicate rule definition 'cake' found.");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("export_file(name = 'cake', src = 'hello.txt')\n"
                 + "genrule(name = 'cake', out = 'file.txt', cmd = 'touch $OUT')\n")
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -486,7 +479,7 @@ public class ParserWithConfigurableAttributesTest {
         "def foo(name): native.export_file(name=name)\n".getBytes(UTF_8),
         StandardOpenOption.APPEND);
     Files.write(testBuildFile, "foo(name='BUCK')\n".getBytes(UTF_8), StandardOpenOption.APPEND);
-    parser.getTargetNode(
+    parser.getTargetNodeAssertCompatible(
         parsingContext,
         BuildTargetFactory.newInstance("//java/com/facebook:foo"),
         DependencyStack.root());
@@ -497,11 +490,12 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(BuildFileParseException.class);
     thrown.expectMessage("rules 'name' field must be a string.  Found None.");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile, ("genrule(name = None, out = 'file.txt', cmd = 'touch $OUT')\n").getBytes(UTF_8));
+        buckFile.getPath(),
+        ("genrule(name = None, out = 'file.txt', cmd = 'touch $OUT')\n").getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -624,7 +618,7 @@ public class ParserWithConfigurableAttributesTest {
             WatchmanPathEvent.of(
                 filesystem.getRootPath(),
                 Kind.CREATE,
-                Paths.get("java/com/facebook/Something.java")));
+                RelPath.of(Paths.get("java/com/facebook/Something.java"))));
 
     // Call filterAllTargetsInProject to request cached rules.
     filterAllTargetsInProject(parser, parsingContext);
@@ -658,7 +652,7 @@ public class ParserWithConfigurableAttributesTest {
             .getBytes(UTF_8),
         StandardOpenOption.APPEND);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     assertEquals(2, counter.calls);
 
@@ -666,10 +660,10 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), configBuckFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), configBuckFile)));
     parser.getPermState().invalidateBasedOn(event);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     // Test that the second call triggers re-parsing of all files.
     assertEquals("Should have invalidated cache.", 4, counter.calls);
@@ -711,7 +705,7 @@ public class ParserWithConfigurableAttributesTest {
             .getBytes(UTF_8),
         StandardOpenOption.APPEND);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     assertEquals(2, counter.calls);
 
@@ -719,10 +713,10 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), defsFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defsFile)));
     parser.getPermState().invalidateBasedOn(event);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     // Test that the second call triggers re-parsing of all files.
     assertEquals("Should have invalidated cache.", 4, counter.calls);
@@ -742,13 +736,13 @@ public class ParserWithConfigurableAttributesTest {
                     EnvVariablesProvider.getSystemEnv().get("PATH")))
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cells cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
     // Call filterAllTargetsInProject to populate the cache.
-    filterAllTargetsInProject(parser, parsingContext.withCell(cell));
+    filterAllTargetsInProject(parser, parsingContext.withCell(cell.getRootCell()));
 
     // Call filterAllTargetsInProject to request cached rules with identical environment.
-    filterAllTargetsInProject(parser, parsingContext.withCell(cell));
+    filterAllTargetsInProject(parser, parsingContext.withCell(cell.getRootCell()));
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated cache.", 1, counter.calls);
@@ -776,7 +770,7 @@ public class ParserWithConfigurableAttributesTest {
             WatchmanPathEvent.of(
                 filesystem.getRootPath(),
                 Kind.CREATE,
-                MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
+                RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile))));
 
     // Call parseBuildFile to request cached rules.
     getRawTargetNodes(
@@ -814,7 +808,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -853,7 +847,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.DELETE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -892,7 +886,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.CREATE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -933,7 +927,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -972,7 +966,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.DELETE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1011,7 +1005,8 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.CREATE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
+            RelPath.of(
+                MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1050,7 +1045,8 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
+            RelPath.of(
+                MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1089,7 +1085,8 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.DELETE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
+            RelPath.of(
+                MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1128,7 +1125,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.CREATE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1167,7 +1164,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1206,7 +1203,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.DELETE,
-            MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
+            RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1244,7 +1241,9 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.CREATE, Paths.get("java/com/facebook/SomeClass.java"));
+            filesystem.getRootPath(),
+            Kind.CREATE,
+            RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1275,7 +1274,7 @@ public class ParserWithConfigurableAttributesTest {
                 "[project]",
                 "check_package_boundary = false")
             .build();
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cells cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
     Path testAncestorBuildFile = tempDir.newFile("java/BUCK").toRealPath();
     Files.write(testAncestorBuildFile, "java_library(name = 'root')\n".getBytes(UTF_8));
@@ -1285,7 +1284,7 @@ public class ParserWithConfigurableAttributesTest {
         parser,
         typeCoercerFactory,
         eventBus,
-        cell,
+        cell.getRootCell(),
         knownRuleTypesProvider,
         false,
         executorService,
@@ -1295,7 +1294,9 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.CREATE, Paths.get("java/com/facebook/SomeClass.java"));
+            filesystem.getRootPath(),
+            Kind.CREATE,
+            RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1303,7 +1304,7 @@ public class ParserWithConfigurableAttributesTest {
         parser,
         typeCoercerFactory,
         eventBus,
-        cell,
+        cell.getRootCell(),
         knownRuleTypesProvider,
         false,
         executorService,
@@ -1332,7 +1333,9 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.MODIFY, Paths.get("java/com/facebook/SomeClass.java"));
+            filesystem.getRootPath(),
+            Kind.MODIFY,
+            RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1370,7 +1373,9 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.DELETE, Paths.get("java/com/facebook/SomeClass.java"));
+            filesystem.getRootPath(),
+            Kind.DELETE,
+            RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1409,7 +1414,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.CREATE,
-            Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
+            RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1448,7 +1453,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.MODIFY,
-            Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
+            RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1487,7 +1492,7 @@ public class ParserWithConfigurableAttributesTest {
         WatchmanPathEvent.of(
             filesystem.getRootPath(),
             Kind.DELETE,
-            Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
+            RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1524,7 +1529,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.CREATE, Paths.get("SomeClass.java__backup"));
+            filesystem.getRootPath(), Kind.CREATE, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1561,7 +1566,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.MODIFY, Paths.get("SomeClass.java__backup"));
+            filesystem.getRootPath(), Kind.MODIFY, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1598,7 +1603,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.DELETE, Paths.get("SomeClass.java__backup"));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1630,9 +1635,9 @@ public class ParserWithConfigurableAttributesTest {
                     ParserConfig.BUILDFILE_SECTION_NAME,
                     ImmutableMap.of(ParserConfig.INCLUDES_PROPERTY_NAME, "//bar.py")))
             .build();
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cells cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    filterAllTargetsInProject(parser, parsingContext.withCell(cell));
+    filterAllTargetsInProject(parser, parsingContext.withCell(cell.getRootCell()));
 
     assertEquals("Should have invalidated cache.", 2, counter.calls);
   }
@@ -1656,13 +1661,14 @@ public class ParserWithConfigurableAttributesTest {
                     ParserConfig.BUILDFILE_SECTION_NAME,
                     ImmutableMap.of(ParserConfig.INCLUDES_PROPERTY_NAME, "//bar.py")))
             .build();
-    Cell newCell =
+    Cells newCell =
         new TestCellBuilder().setFilesystem(newFilesystem).setBuckConfig(newConfig).build();
 
     Parser newParser =
-        TestParserFactory.create(executor.get(), newCell, knownRuleTypesProvider, eventBus);
+        TestParserFactory.create(
+            executor.get(), newCell.getRootCell(), knownRuleTypesProvider, eventBus);
 
-    filterAllTargetsInProject(newParser, parsingContext.withCell(newCell));
+    filterAllTargetsInProject(newParser, parsingContext.withCell(newCell.getRootCell()));
 
     assertEquals("Should not have invalidated cache.", 1, counter.calls);
   }
@@ -1715,11 +1721,11 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(testBarBuckFile, "java_library(name = 'bar')\n".getBytes(UTF_8));
     WatchmanPathEvent deleteEvent =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.DELETE, Paths.get("foo").resolve("BUCK"));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo").resolve("BUCK")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     WatchmanPathEvent modifyEvent =
         WatchmanPathEvent.of(
-            filesystem.getRootPath(), Kind.MODIFY, Paths.get("bar").resolve("BUCK"));
+            filesystem.getRootPath(), Kind.MODIFY, RelPath.of(Paths.get("bar").resolve("BUCK")));
     parser.getPermState().invalidateBasedOn(modifyEvent);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
@@ -1788,7 +1794,8 @@ public class ParserWithConfigurableAttributesTest {
 
     Files.delete(testBarJavaFile);
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(filesystem.getRootPath(), Kind.DELETE, Paths.get("foo/Bar.java"));
+        WatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo/Bar.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     HashCode updatedHash = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
@@ -1815,9 +1822,11 @@ public class ParserWithConfigurableAttributesTest {
 
     Files.move(testFooJavaFile, testFooJavaFile.resolveSibling("Bar.java"));
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(filesystem.getRootPath(), Kind.DELETE, Paths.get("foo/Foo.java"));
+        WatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo/Foo.java")));
     WatchmanPathEvent createEvent =
-        WatchmanPathEvent.of(filesystem.getRootPath(), Kind.CREATE, Paths.get("foo/Bar.java"));
+        WatchmanPathEvent.of(
+            (filesystem.getRootPath()), Kind.CREATE, RelPath.of(Paths.get("foo/Bar.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     parser.getPermState().invalidateBasedOn(createEvent);
 
@@ -1889,7 +1898,7 @@ public class ParserWithConfigurableAttributesTest {
     BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
 
     TargetNode<?> targetNode =
-        parser.getTargetNode(parsingContext, fooLibTarget, DependencyStack.root());
+        parser.getTargetNodeAssertCompatible(parsingContext, fooLibTarget, DependencyStack.root());
     assertThat(targetNode.getBuildTarget(), equalTo(fooLibTarget));
 
     SortedMap<String, Object> targetNodeAttributes =
@@ -1932,7 +1941,8 @@ public class ParserWithConfigurableAttributesTest {
 
     tempDir.newFile("bar/Baz.java");
     WatchmanPathEvent createEvent =
-        WatchmanPathEvent.of(filesystem.getRootPath(), Kind.CREATE, Paths.get("bar/Baz.java"));
+        WatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, RelPath.of(Paths.get("bar/Baz.java")));
     parser.getPermState().invalidateBasedOn(createEvent);
 
     {
@@ -1986,7 +1996,8 @@ public class ParserWithConfigurableAttributesTest {
 
     Files.delete(bazSourceFile);
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(filesystem.getRootPath(), Kind.DELETE, Paths.get("bar/Baz.java"));
+        WatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("bar/Baz.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     {
@@ -2017,7 +2028,8 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .setSections("[project]", "allow_symlinks = forbid")
             .build();
-    cell = new TestCellBuilder().setBuckConfig(config).setFilesystem(filesystem).build();
+    cell =
+        new TestCellBuilder().setBuckConfig(config).setFilesystem(filesystem).build().getRootCell();
 
     tempDir.newFolder("bar");
     tempDir.newFile("bar/Bar.java");
@@ -2046,7 +2058,8 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .setSections("[project]", "read_only_paths = foo/bar")
             .build();
-    cell = new TestCellBuilder().setBuckConfig(config).setFilesystem(filesystem).build();
+    cell =
+        new TestCellBuilder().setBuckConfig(config).setFilesystem(filesystem).build().getRootCell();
 
     tempDir.newFolder("bar");
     tempDir.newFile("bar/Bar.java");
@@ -2092,10 +2105,10 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void readConfigReadsConfig() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//", "cake");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2108,10 +2121,11 @@ public class ParserWithConfigurableAttributesTest {
 
     BuckConfig config = FakeBuckConfig.builder().setFilesystem(filesystem).build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
     TargetNode<GenruleDescriptionArg> node =
         TargetNodes.castArg(
-                parser.getTargetNode(
+                parser.getTargetNodeAssertCompatible(
                     parsingContext.withCell(cell), buildTarget, DependencyStack.root()),
                 GenruleDescriptionArg.class)
             .get();
@@ -2121,9 +2135,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void emptyStringBuckConfigEntryDoesNotCauseInvalidation() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2137,13 +2151,17 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2155,10 +2173,10 @@ public class ParserWithConfigurableAttributesTest {
     assumeTrue(Platform.detect() == Platform.MACOS);
     assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library("
                 + "  name = 'lib', "
                 + "  srcs=glob(['*.c']), "
@@ -2194,10 +2212,10 @@ public class ParserWithConfigurableAttributesTest {
     assumeTrue(Platform.detect() == Platform.MACOS);
     assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library(" + "  name = 'lib', " + "  srcs=glob(['*.c']) " + ")").getBytes(UTF_8));
 
     BuckConfig config =
@@ -2209,7 +2227,8 @@ public class ParserWithConfigurableAttributesTest {
                     ImmutableMap.of("platform", "iphoneos-arm64", "type", "shared")))
             .build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
     ImmutableSet<BuildTarget> result =
         parser
@@ -2235,10 +2254,10 @@ public class ParserWithConfigurableAttributesTest {
     // We depend on Xcode platforms for this test.
     assumeTrue(Platform.detect() == Platform.MACOS);
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library("
                 + "  name = 'lib', "
                 + "  srcs=glob(['*.c']), "
@@ -2255,7 +2274,8 @@ public class ParserWithConfigurableAttributesTest {
                     ImmutableMap.of("platform", "iphoneos-arm64", "type", "shared")))
             .build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
     ImmutableSet<BuildTarget> result =
         parser
@@ -2278,13 +2298,13 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void countsParsedBytes() throws Exception {
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     byte[] bytes =
         ("genrule(" + "name='gen'," + "out='generated', " + "cmd='touch ${OUT}')").getBytes(UTF_8);
-    Files.write(buckFile, bytes);
+    Files.write(buckFile.getPath(), bytes);
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).build();
+    cell = new TestCellBuilder().setFilesystem(filesystem).build().getRootCell();
 
     List<ParseEvent.Finished> events = new ArrayList<>();
     class EventListener {
@@ -2336,12 +2356,12 @@ public class ParserWithConfigurableAttributesTest {
   @Test
   public void testVisibilityGetsChecked() throws Exception {
     Path visibilityData = TestDataHelper.getTestDataScenario(this, "visibility");
-    Path visibilityBuckFile = cellRoot.resolve("BUCK");
-    Path visibilitySubBuckFile = cellRoot.resolve("sub/BUCK");
-    Files.createDirectories(visibilityBuckFile.getParent());
-    Files.createDirectories(visibilitySubBuckFile.getParent());
-    Files.copy(visibilityData.resolve("BUCK.fixture"), visibilityBuckFile);
-    Files.copy(visibilityData.resolve("sub/BUCK.fixture"), visibilitySubBuckFile);
+    AbsPath visibilityBuckFile = cellRoot.resolve("BUCK");
+    AbsPath visibilitySubBuckFile = cellRoot.resolve("sub/BUCK");
+    Files.createDirectories(visibilityBuckFile.getParent().getPath());
+    Files.createDirectories(visibilitySubBuckFile.getParent().getPath());
+    Files.copy(visibilityData.resolve("BUCK.fixture"), visibilityBuckFile.getPath());
+    Files.copy(visibilityData.resolve("sub/BUCK.fixture"), visibilitySubBuckFile.getPath());
 
     parser.buildTargetGraph(
         parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:should_pass")));
@@ -2361,9 +2381,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvChangesThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2382,9 +2402,11 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2397,9 +2419,11 @@ public class ParserWithConfigurableAttributesTest {
                     .build())
             .build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2407,9 +2431,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvAddedThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2420,9 +2444,11 @@ public class ParserWithConfigurableAttributesTest {
 
     BuckConfig config = FakeBuckConfig.builder().setFilesystem(filesystem).build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2435,9 +2461,11 @@ public class ParserWithConfigurableAttributesTest {
                     .build())
             .build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2445,9 +2473,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvRemovedThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2466,16 +2494,20 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config = FakeBuckConfig.builder().setFilesystem(filesystem).build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2483,9 +2515,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenUnrelatedEnvChangesThenCachedRulesAreNotInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2505,9 +2537,11 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2521,9 +2555,11 @@ public class ParserWithConfigurableAttributesTest {
             .setFilesystem(filesystem)
             .build();
 
-    cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2531,9 +2567,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void testSkylarkSyntaxParsing() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("\n")
             .join(
                 ImmutableList.of(
@@ -2548,15 +2584,17 @@ public class ParserWithConfigurableAttributesTest {
             .setSections("[parser]", "polyglot_parsing_enabled=true")
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
   }
 
   @Test
   public void testSkylarkIsUsedWithoutPolyglotParsingEnabled() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("\n")
             .join(
                 ImmutableList.of("genrule(name = type(''), out = 'file.txt', cmd = 'touch $OUT')"))
@@ -2568,10 +2606,11 @@ public class ParserWithConfigurableAttributesTest {
             .setSections("[parser]", "default_build_file_syntax=skylark")
             .build();
 
-    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+    Cell cell =
+        new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
     TargetNode<?> targetNode =
-        parser.getTargetNode(
+        parser.getTargetNodeAssertCompatible(
             parsingContext.withCell(cell),
             BuildTargetFactory.newInstance("//:string"),
             DependencyStack.root());
@@ -2676,13 +2715,11 @@ public class ParserWithConfigurableAttributesTest {
     try (PerBuildState state =
         new PerBuildStateFactory(
                 typeCoercerFactory,
-                new DefaultConstructorArgMarshaller(typeCoercerFactory),
+                new DefaultConstructorArgMarshaller(),
                 knownRuleTypesProvider,
                 new ParserPythonInterpreterProvider(cell.getBuckConfig(), executableFinder),
                 WatchmanFactory.NULL_WATCHMAN,
                 eventBus,
-                getManifestSupplier(),
-                new FakeFileHashCache(hashes),
                 new ParsingUnconfiguredBuildTargetViewFactory(),
                 UnconfiguredTargetConfiguration.INSTANCE)
             .create(ParsingContext.builder(cell, executor).build(), parser.getPermState())) {
@@ -2693,7 +2730,8 @@ public class ParserWithConfigurableAttributesTest {
                 parser.getTargetNodeRawAttributes(
                     state,
                     cell,
-                    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root()),
+                    parser.getTargetNodeAssertCompatible(
+                        parsingContext, buildTarget, DependencyStack.root()),
                     DependencyStack.root())));
       }
 
