@@ -20,6 +20,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.io.watchman.WatchmanEvent.Kind;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
@@ -153,7 +155,8 @@ public class BuildFileManifestCacheTest {
 
   @Test
   public void whenRootBuildFileIsModifiedThenInvalidateOnlyRootPackage() {
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.MODIFY, Paths.get("BUCK"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(Paths.get("BUCK")));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, true);
@@ -162,7 +165,8 @@ public class BuildFileManifestCacheTest {
   @Test
   public void whenNonRootBuildFileIsModifiedThenInvalidateOnlyNonRootPackage() {
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(cell1Path, Kind.MODIFY, Paths.get("folder1/folder2/BUCK"));
+        WatchmanPathEvent.of(
+            AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(Paths.get("folder1/folder2/BUCK")));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -170,7 +174,8 @@ public class BuildFileManifestCacheTest {
 
   @Test
   public void whenBuildFileIsModifiedInAnotherCellThenDoNotInvalidate() {
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell2Path, Kind.MODIFY, Paths.get("BUCK"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell2Path), Kind.MODIFY, RelPath.of(Paths.get("BUCK")));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, true);
@@ -181,7 +186,8 @@ public class BuildFileManifestCacheTest {
     Path buckFilePath = Paths.get("BUCK");
     Files.delete(cell1Path.resolve(buckFilePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.DELETE, buckFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.DELETE, RelPath.of(buckFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, true);
@@ -193,7 +199,8 @@ public class BuildFileManifestCacheTest {
     Path buckFilePath = Paths.get("folder1/folder2/BUCK");
     Files.delete(cell1Path.resolve(buckFilePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.DELETE, buckFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.DELETE, RelPath.of(buckFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, false);
@@ -203,7 +210,8 @@ public class BuildFileManifestCacheTest {
   public void whenRegularFileIsModifiedThenNoPackagesAreInvalidated() {
     Path modifiedFilePath = Paths.get("folder1/folder2/1.java");
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.MODIFY, modifiedFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(modifiedFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, true);
@@ -214,7 +222,8 @@ public class BuildFileManifestCacheTest {
     Path buckFilePath = Paths.get("folder1/folder2/1.java");
     Files.delete(cell1Path.resolve(buckFilePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.DELETE, buckFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.DELETE, RelPath.of(buckFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -225,7 +234,8 @@ public class BuildFileManifestCacheTest {
     Path newFilePath = Paths.get("folder1/folder2/3.java");
     Files.createFile(cell1Path.resolve(newFilePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.CREATE, newFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.CREATE, RelPath.of(newFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -237,7 +247,8 @@ public class BuildFileManifestCacheTest {
     Path newFilePath = Paths.get("folder1/3.java");
     Files.createFile(cell1Path.resolve(newFilePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.CREATE, newFilePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.CREATE, RelPath.of(newFilePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, true);
@@ -249,7 +260,8 @@ public class BuildFileManifestCacheTest {
     Path filePath = Paths.get("folder1/1.java");
     Files.delete(cell1Path.resolve(filePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.DELETE, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.DELETE, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, true);
@@ -259,7 +271,8 @@ public class BuildFileManifestCacheTest {
   public void whenBzlFileIsModifiedThenReferencingPackageIsInvalidated() {
     Path filePath = Paths.get("includes/include2.bzl");
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.MODIFY, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -269,7 +282,8 @@ public class BuildFileManifestCacheTest {
   public void whenBzlFileIsModifiedAndPackageIsRootThenReferencingPackageIsInvalidated() {
     Path filePath = Paths.get("includes/include1.bzl");
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.MODIFY, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(false, true);
@@ -280,7 +294,8 @@ public class BuildFileManifestCacheTest {
     Path filePath = Paths.get("includes/include2.bzl");
     Files.delete(cell1Path.resolve(filePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.DELETE, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.DELETE, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -291,7 +306,8 @@ public class BuildFileManifestCacheTest {
     Path filePath = Paths.get("includes/include3.bzl");
     Files.createFile(cell1Path.resolve(filePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.CREATE, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.CREATE, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, true);
@@ -301,7 +317,8 @@ public class BuildFileManifestCacheTest {
   public void whenBzlFileIsNotReferencedAndModifiedThenNothingHappens() {
     Path filePath = Paths.get("includes/noninclude.bzl");
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.MODIFY, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.MODIFY, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, true);
@@ -311,7 +328,8 @@ public class BuildFileManifestCacheTest {
   public void whenBzlFileFromAnotherCellIsModifiedThenPackageIsInvalidated() {
     Path filePath = Paths.get("includes/include2.bzl");
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell2Path, Kind.MODIFY, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell2Path), Kind.MODIFY, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, false);
@@ -322,7 +340,8 @@ public class BuildFileManifestCacheTest {
     Path filePath = Paths.get("includes/somefile.java");
     Files.createFile(cell1Path.resolve(filePath));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(cell1Path, Kind.CREATE, filePath);
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(cell1Path), Kind.CREATE, RelPath.of(filePath));
     cache.getInvalidator().onFileSystemChange(event);
 
     assertPackages(true, true);
